tests/fixtures/invalid/max_dict_bool.py
# Cannot call max() with Dict[str, int], Bool
x = max({"a": 1}, True)
